# accelerator

./: README.md
accelerator_agilex/: README.md
accelerator_arria/datagen/: datagen.py
accelerator_arria/in/: data_in_11_11.csv
accelerator_arria/src/: io.hpp
accelerator_cpu/: CMakeLists.txt  README.md
accelerator_stratix/: CMakeLists.txt  README.md
accelerator_stratix/experiments/experiment_args_restrict_2d_flip/: run_100.sh.o2344860  run_10k.sh.o2344865  run_1k.sh.o2344861
accelerator_stratix/experiments/experiment_loop_unroll_2_2d_flip/: run_100.sh.o2345874  run_10k.sh.o2346421  run_1k.sh.o2345879
accelerator_stratix/experiments/experiment_loop_unroll_4_2d_flip/: run_100.sh.o2346494  run_10k.sh.o2346498  run_1k.sh.o2346496
accelerator_stratix/experiments/experiment_loop_unroll_6_2d_flip/: run_100.sh.o2346528  run_10k.sh.o2346530  run_1k.sh.o2346529
accelerator_stratix/experiments/experiment_pipes/: run_100.sh.o2375139  run_100k.sh.o2375147  run_10k.sh.o2375143  run_1k.sh.o2375142
accelerator_stratix/experiments/experiment_png_support_four_kernel/: run_fpga_test.sh  run_fpga_test.sh.o2444190  run_fpga_test_1m.sh  run_fpga_test_1m.sh.o2444207
accelerator_stratix/experiments/experiment_saturate_ddr/: run_100.sh.o2357881  run_100k.sh.o2354996  run_10k.sh.o2354489  run_1k.sh.o2354488
accelerator_stratix/experiments/experiment_simple_2d_flip/: run_100.sh.o2341367  run_10k.sh.o2341369  run_1k.sh.o2341368
accelerator_stratix/src/: CMakeLists.txt  PngImage.hpp  util.hpp  vector-add-buffers.cpp
accelerator_stratix_png_support_eight_kernel/: README.md
(+24 files in other folders)
